--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,13 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.firebase:firebase-auth:11.6.0'
     implementation 'com.google.android.gms:play-services-auth:11.6.0'
+    implementation 'com.google.firebase:firebase-database:11.6.0'
+    implementation 'com.google.firebase:firebase-core:11.6.0'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.6'
 
 }
 //apply  'com.google.gms.google-services'//firebase
 
 
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'io.fabric'
