--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
@@ -12,7 +15,11 @@ buildscript {
        // classpath 'com.google.gms:google-services:4.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:3.1.1'
+        classpath 'com.google.gms:google-services:3.1.2'
+
+
+        // Add dependency
+        classpath 'io.fabric.tools:gradle:1.26.1'
     }
 }
 
@@ -20,6 +27,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        // Add repository
+        maven {
+            url 'https://maven.google.com/'
+        }
     }
 }
 
