--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,5 +29,5 @@
 
         </activity>
     </application>
-
+<uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
 </manifest>
