--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.conor.softwareapp">
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
 
     <application
         android:allowBackup="true"
@@ -28,6 +29,9 @@
 
 
         </activity>
+
+
     </application>
-<uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
+
+
 </manifest>
