--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,10 +27,11 @@
         <activity android:name=".Login" />
         <activity android:name=".chat"/>
         <activity android:name=".audio"/>
+        <activity android:name=".musicPlayer"/>
         <activity android:name=".support"/>
         <activity android:name=".journal"/>
         <activity android:name=".LoginInHome"/>
-            <activity android:name=".home" >
+            <activity android:name=".home">
 
 
         </activity>
