--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.6'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7', changing: true
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
 
 }
