--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,23 +16,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashScreen">
+        <activity android:name=".splashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Register" />
+        <activity android:name=".register" />
         <activity android:name=".Login" />
         <activity android:name=".chat" />
         <activity android:name=".audio" />
         <activity android:name=".musicPlayer" />
         <activity android:name=".support" />
         <activity android:name=".journal" />
-        <activity android:name=".LoginInHome" />
+        <activity android:name=".loginInHome" />
         <activity android:name=".home" />
-        <activity android:name=".MessageActivity" />
+        <activity android:name=".messageActivity" />
     </application>
 
 </manifest>
