--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,9 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.google.firebase:firebase-auth:11.6.0'
+   // implementation 'com.google.firebase:firebase-auth:11.6.0'
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -38,7 +39,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:11.6.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.6'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.7', changing: true
+    implementation 'com.android.support:design:28.0.0'
+   // compile group: 'com.google.code.gson', name: 'gson', version: '2.7', changing: true
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
