--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,12 @@
         <activity android:name=".register" />
         <activity android:name=".Login" />
         <activity
+            android:name=".home"
+            android:theme="@style/AppTheme.noActionBar" />
+        <activity
+            android:name=".profile"
+        />
+        <activity
             android:name=".chat" />
         <activity
             android:name=".audio"/>
@@ -36,9 +42,6 @@
         <activity
             android:name=".journal" />
         <activity android:name=".loginInHome" />
-        <activity
-            android:name=".home"
-            android:theme="@style/AppTheme.noActionBar" />
         <activity android:name=".messageActivity" />
     </application>
 
