--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,12 +38,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:11.6.0'
     implementation 'com.google.firebase:firebase-core:11.6.0'
     implementation 'com.google.firebase:firebase-storage:11.6.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.6'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation 'com.android.support:design:28.0.0'
    // compile group: 'com.google.code.gson', name: 'gson', version: '2.7', changing: true
     implementation 'com.github.bumptech.glide:glide:4.7.1'
-    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+   //  Glide v4 uses this new annotation processor -- see https:bumptech.github.io/glide/doc/generatedapi.html
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
 
