--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
    // compile group: 'com.google.code.gson', name: 'gson', version: '2.7', changing: true
     implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
    //  Glide v4 uses this new annotation processor -- see https:bumptech.github.io/glide/doc/generatedapi.html
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
