--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
    // compile group: 'com.google.code.gson', name: 'gson', version: '2.7', changing: true
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
    //  Glide v4 uses this new annotation processor -- see https:bumptech.github.io/glide/doc/generatedapi.html
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
