--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
-   //  Glide v4 uses this new annotation processor -- see https:bumptech.github.io/glide/doc/generatedapi.html
+   implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.firebase:firebase-messaging:11.6.0'
+    //  Glide v4 uses this new annotation processor -- see https:bumptech.github.io/glide/doc/generatedapi.html
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
 
