notifcations working for nexus

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <service android:name=".notifications.MyFirebaseIdService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <service android:name=".notifications.myFirebaseMessaging"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
         <activity android:name=".log.splashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,6 +58,7 @@
         <activity android:name=".mainActivties.journal" />
         <activity android:name=".log.loginInHome" />
         <activity android:name=".players.messageActivity" />
+
     </application>
 
 </manifest>
