--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,20 +42,14 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.6'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation 'com.android.support:design:28.0.0'
-    // compile group: 'com.google.code.gson', name: 'gson', version: '2.7', changing: true
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.google.firebase:firebase-messaging:11.6.0'
-    //  Glide v4 uses this new annotation processor -- see https:bumptech.github.io/glide/doc/generatedapi.html
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
-
-
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
-//apply  'com.google.gms.google-services'//firebase
-
-
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'io.fabric'
