--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.volley:volley:1.0.0'
@@ -48,6 +49,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:11.6.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    // Espresso UI Testing
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:2.2.1"
+// Optional if you need to detect intents.
+    androidTestImplementation "com.android.support.test.espresso:espresso-intents:2.2.1"
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
 
 }
 apply plugin: 'com.google.gms.google-services'
