--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,12 @@ android {
     }
 
 
-
+    android {
+        // [...]
+        packagingOptions {
+            pickFirst 'protobuf.meta'
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
